[tool.poetry]
name = "http-file-storage"
version = "0.1.0"
description = ""
authors = ["Alexandr <alexandr.panteleev2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-httpauth = "^4.8.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true